Fixed wisth of textarea/input boxes on mobile v2

--- a/src/components/CommentsView.module.css
+++ b/src/components/CommentsView.module.css
@@ -89,6 +89,6 @@
     border-bottom: 1px solid lightgray;
   }
   .comments-container textarea {
-    width: calc(100% - 2rem);
+    width: calc(100% - 1rem);
   }
 }
